2024_12_19_113430_linux_stable_linux-6_12_y_FAILED/summary.txt
BuildBot project: linux_stable_linux-6_12_y
Linux version: 6.12.100
Commit hash: e4f07686ba82a80a78772ebb83dc9a93cd626d83

Building kernel failed!
stderr:

drivers/regulator/helpers.c: In function ‘write_separate_vsel_and_range’:
drivers/regulator/helpers.c:181:16: error: ‘const struct regulator_desc’ has no member named ‘range_applied_by_vsel’
  if (rdev->desc->range_applied_by_vsel && range_updated)
                ^~
drivers/regulator/helpers.c: At top level:
cc1: warning: unrecognized command line option ‘-Wno-stringop-overflow’
make[4]: *** [scripts/Makefile.build:229: drivers/regulator/helpers.o] Error 1
make[3]: *** [scripts/Makefile.build:478: drivers/regulator] Error 2
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [scripts/Makefile.build:478: drivers] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [/home/user01/Linux-Driver-Testing/buildbot/master_root/master/workers/Linux_Worker/linux_stable_linux-6_12_y/build/Makefile:1936: .] Error 2
make: *** [Makefile:224: __sub-make] Error 2

Git bisect state: cannot_start
status: waiting for good commit(s), bad commit known

